# snow-deal

./: .gitignore  AGENTS.md  EVALUATION.md  FINDINGS.md  GTM.md  PLANS.md  README.md  deal.user.js  pyproject.toml  render.yaml
.github/workflows/: scrape.yml
aggregator/: AGENTS.md  Dockerfile  PLANS.md  README.md  pyproject.toml  start.sh
aggregator/aggregator/: __init__.py  auth.py  auth_db.py  browser.py  categorizer.py  cli.py  config.py  db.py  models.py  scraper.py  wordlist.py
aggregator/aggregator/parsers/: __init__.py  alpineshopvt.py  backcountry.py  coloradodiscount.py  evo.py  rei.py  thecircle.py
aggregator/aggregator/web/: admin_routes.py  app.py  event_routes.py  invite_routes.py  routes.py
aggregator/aggregator/web/static/: style.css
aggregator/aggregator/web/templates/: admin_codes.html  admin_stats.html  index.html  invite.html  status.html
aggregator/aggregator/web/templates/partials/: _card.html  deal_cards.html  more_cards.html
deal/: __init__.py  cli.py  display.py  scraper.py
deal/parsers/: __init__.py  base.py  bluezone.py  shopify.py
snow_deals/: __init__.py  cli.py  display.py  models.py  scraper.py
snow_deals/parsers/: __init__.py  base.py  bluezone.py  shopify.py
tampermonkey/: snow-deals.user.js
