[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deal"
version = "0.1.0"
description = "CLI tool that scrapes e-commerce listings and ranks items by discount percentage"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
deal = "deal.cli:cli"

[tool.setuptools.packages.find]
include = ["deal*"]
