[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snow-deals-aggregator"
version = "0.1.0"
description = "Deal aggregator for ski/snowboard retailers — scrapes ~16 stores and ranks deals via FastAPI + htmx"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "click>=8.1",
    "rich>=13.0",
    "snow-deals",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
snow-deals-agg = "aggregator.cli:cli"

[tool.setuptools.packages.find]
include = ["aggregator*"]
